k8s/base/trace-streamer.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trace-streamer
  labels:
    app: trace-streamer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trace-streamer
  template:
    metadata:
      labels:
        app: trace-streamer
    spec:
      containers:
        - name: trace-streamer
          image: ghcr.io/lucasnic/trace-streamer:ee68c6b
          ports:
            - name: grpc
              containerPort: 4317
            - name: http
              containerPort: 8081
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: trace-streamer
  labels:
    app: trace-streamer
spec:
  selector:
    app: trace-streamer
  ports:
    - name: grpc
      port: 4317
      targetPort: 4317
    - name: http
      port: 8081
      targetPort: 8081
